--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -14,6 +14,7 @@ jobs:
     outputs:
       package_id: ${{ steps.set_name.outputs.package_id }}
       package_version: ${{ steps.set_name.outputs.package_version }}
+      tag_name: ${{ steps.set_tag.outputs.tag_name }}
 
     steps:
       - name: Checkout code
@@ -42,13 +43,30 @@ jobs:
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
             PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            PACKAGE_ID="nexus-git-1.0.1"
-            PACKAGE_VERSION="1.0.1"
+            # Get the latest tag and increment the version
+            TAG=$(git tag --sort=-creatordate | grep '^v' | head -n 1)
+            if [ -z "$TAG" ]; then
+              TAG="v1.0.0"
+            fi
+            # Increment the version
+            VERSION=${TAG#v}
+            IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
+            VERSION_PARTS[2]=$((VERSION_PARTS[2]+1)) # Increment the patch version
+            PACKAGE_VERSION="v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+            PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
           fi 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
+
+      - name: Create Git Tag
+        id: set_tag
+        if: github.ref == 'refs/heads/master'
+        run: |
+          echo "Creating tag ${PACKAGE_VERSION}"
+          git tag ${PACKAGE_VERSION}
+          git push origin ${PACKAGE_VERSION}
 
       - name: Pack project
         run: |
@@ -83,4 +101,4 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
+          dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.
