--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -44,29 +44,36 @@ jobs:
             PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
             # Get the latest tag and increment the version
-            TAG=$(git tag --sort=-creatordate | grep '^v' | head -n 1)
+            TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
             if [ -z "$TAG" ]; then
               TAG="1.0.0"
             fi
             # Increment the version
-            VERSION=${TAG#v}
+            VERSION=${TAG}
             IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
             VERSION_PARTS[2]=$((VERSION_PARTS[2]+1)) # Increment the patch version
-            PACKAGE_VERSION="v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+            PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
             PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
           fi 
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
-          echo "::set-output name=package_id::${PACKAGE_ID}" 
+          echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
 
       - name: Create Git Tag
         id: set_tag
         if: github.ref == 'refs/heads/master'
         run: |
-          echo "Creating tag ${PACKAGE_VERSION}"
-          git tag ${PACKAGE_VERSION}
-          git push origin ${PACKAGE_VERSION}
+          echo "Checking for existing tags..."
+          TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
+
+          if [ -z "$TAG_EXISTS" ]; then
+            echo "Creating tag ${PACKAGE_VERSION}"
+            git tag ${PACKAGE_VERSION}
+            git push origin ${PACKAGE_VERSION}
+          else
+            echo "Tag ${PACKAGE_VERSION} already exists. Skipping tag creation."
+          fi
 
       - name: Pack project
         run: |
@@ -74,7 +81,7 @@ jobs:
           # List files in the output directory for debugging
           ls -al ./bin/Release
 
-      - name: Upload Package as Artifact 
+      - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: nuget-package
@@ -101,4 +108,4 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.
+          dot net nuget push ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg --source "Nexus" --api-key $NEXUS_API_KEY
