--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,14 +3,11 @@ name: Publish Package
 on:
   push:
     branches:
-      - development  
-      - release
-      - master
+      - master  # Trigger on master branch only
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     outputs:
       package_id: ${{ steps.set_name.outputs.package_id }}
       package_version: ${{ steps.set_name.outputs.package_version }}
@@ -23,7 +20,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '8.0.x'  
+          dotnet-version: '8.0.x'
 
       - name: Restore dependencies
         run: dotnet restore
@@ -34,40 +31,33 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
-          FOLDER_NAME="nexus-git-development"  
-          if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-            PACKAGE_ID="${FOLDER_NAME}.nexus-git"  
-            PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
-          elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-            COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
-            PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
-            PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-          elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            # Get the latest tag and increment the version
-            TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
-            if [ -z "$TAG" ]; then
-              TAG="1.0.0"
-            fi
-            # Increment the version
-            VERSION=${TAG}
-            IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
-            VERSION_PARTS[1]=$((VERSION_PARTS[1]+1)) # Increment the minor version
-            PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.0"
-            PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
-          fi 
+          FOLDER_NAME="nexus-git"
+          
+          # Check for the latest tag on the master branch
+          TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
+          
+          if [ -z "$TAG" ]; then
+            TAG="1.0.0"  # If no tag exists, default to 1.0.0
+          fi
+          
+          # Increment the version
+          IFS='.' read -r -a VERSION_PARTS <<< "$TAG"
+          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment patch version (3rd part of the tag)
+          PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+          PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
+
+          # Output the version and package name
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
-          echo "::set-output name=package_id::${PACKAGE_ID}"
-          echo "::set-output name=package_version::${PACKAGE_VERSION}"
 
       - name: Create Git Tag
         id: set_tag
         if: github.ref == 'refs/heads/master'
         run: |
-          echo "Checking for existing tags..."
+          # Check if the tag already exists
           TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
-
           if [ -z "$TAG_EXISTS" ]; then
+            # Create and push the new tag
             echo "Creating tag ${PACKAGE_VERSION}"
             git tag ${PACKAGE_VERSION}
             git push origin ${PACKAGE_VERSION}
@@ -77,7 +67,7 @@ jobs:
 
       - name: Pack project
         run: |
-          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
+          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
           # List files in the output directory for debugging
           ls -al ./bin/Release
 
@@ -85,7 +75,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: nuget-package
-          path: ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg
+          path: ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg
 
   push_to_nexus:
     runs-on: ubuntu-latest
@@ -108,4 +98,10 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
+          PACKAGE_PATH="./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg"
+          if [[ -f "$PACKAGE_PATH" ]]; then
+            echo "Pushing package to Nexus..."
+            dotnet nuget push "$PACKAGE_PATH" --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
+          else
+            echo "Package not found: $PACKAGE_PATH"
+            exit 1
