--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,7 +3,7 @@ name: Publish Package
 on:
   push:
     branches:
-      - master  # Trigger on master branch only
+      - master  # Trigger on the master branch only
 
 jobs:
   build:
@@ -33,22 +33,24 @@ jobs:
         run: |
           FOLDER_NAME="nexus-git"
           
-          # Check for the latest tag on the master branch
+          # Get the latest tag on the master branch and increment version
           TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
           
           if [ -z "$TAG" ]; then
             TAG="1.0.0"  # If no tag exists, default to 1.0.0
           fi
           
-          # Increment the version
+          # Increment the version by patch number
           IFS='.' read -r -a VERSION_PARTS <<< "$TAG"
-          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment patch version (3rd part of the tag)
+          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment the patch version (3rd part of the tag)
           PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
           PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
 
           # Output the version and package name
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
+          echo "::set-output name=package_id::${PACKAGE_ID}"
+          echo "::set-output name=package_version::${PACKAGE_VERSION}"
 
       - name: Create Git Tag
         id: set_tag
@@ -67,7 +69,7 @@ jobs:
 
       - name: Pack project
         run: |
-          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ env.PACKAGE_ID }} /p:PackageVersion=${{ env.PACKAGE_VERSION }}
+          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
           # List files in the output directory for debugging
           ls -al ./bin/Release
 
@@ -75,12 +77,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: nuget-package
-          path: ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg
+          path: ./bin/Release/${{ steps.set_name.outputs.package_id }}.${{ steps.set_name.outputs.package_version }}.nupkg
 
   push_to_nexus:
     runs-on: ubuntu-latest
-    needs: build  
-    environment: nexus-approval  
+    needs: build  # This ensures the push_to_nexus job depends on the build job
+    environment: nexus-approval  # This is where the manual approval comes in
 
     steps:
       - name: Download Package Artifact
@@ -98,4 +100,8 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          dotnet nuget push ./bin/Release/${{ env.PACKAGE_ID }}.${{ env.PACKAGE_VERSION }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
+          # Use the package ID and version from the build job outputs
+          PACKAGE_ID="${{ needs.build.outputs.package_id }}"
+          PACKAGE_VERSION="${{ needs.build.outputs.package_version }}"
+          dotnet nuget push ./bin/Release/${PACKAGE_ID}.${PACKAGE_VERSION}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
+         
