--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -52,24 +52,41 @@ jobs:
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
 
-      - name: Create Git Tag
+        - name: Create Git Tag
         id: set_tag
         if: github.ref == 'refs/heads/master'
         run: |
-          # Fetch all tags from the remote to ensure we check the latest tags
-          git fetch --tags
-          
-          # Check if the tag already exists
-          TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
-          
-          if [ -z "$TAG_EXISTS" ]; then
-            # Create and push the new tag
-            echo "Creating tag ${PACKAGE_VERSION}"
+            # Fetch all tags from the remote to ensure we check the latest tags
+            git fetch --tags
+        
+            # Get the latest tag, sort by creation date (descending)
+            TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
+            
+            # If no tags exist, default to 1.0.0
+            if [ -z "$TAG" ]; then
+              TAG="1.0.0"
+            fi
+        
+            # Increment the patch version
+            IFS='.' read -r -a VERSION_PARTS <<< "$TAG"
+            VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment the patch version (3rd part of the tag)
+            PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+        
+            # Check if the incremented version tag already exists
+            TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
+            
+            # If the tag exists, keep incrementing the version until a non-existent tag is found
+            while [ -n "$TAG_EXISTS" ]; do
+              VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment the patch version again
+              PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+              TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
+            done
+        
+            # Now we have a unique tag, create and push it
+            echo "Creating new tag: ${PACKAGE_VERSION}"
             git tag ${PACKAGE_VERSION}
             git push origin ${PACKAGE_VERSION}
-          else
-            echo "Tag ${PACKAGE_VERSION} already exists. Skipping tag creation."
-          fi
+        
 
       - name: Pack project
         run: |
