--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,7 +3,7 @@ name: Publish Package
 on:
   push:
     branches:
-      - master  # Trigger on master branch only
+      - master  
 
 jobs:
   build:
@@ -32,35 +32,35 @@ jobs:
         run: |
           FOLDER_NAME="nexus-git"
           
-          # Fetch all tags to check the latest tag
+          
           git fetch --tags
           
-          # Check for the latest tag on the master branch
+          
           TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
           
           if [ -z "$TAG" ]; then
-            TAG="1.0.0"  # If no tag exists, default to 1.0.0
+            TAG="1.0.0"  
           fi
           
-          # Increment the version (patch version)
+          
           IFS='.' read -r -a VERSION_PARTS <<< "$TAG"
-          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  # Increment patch version
+          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  
           PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
           PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
 
-          # Output the version and package name to be used in other jobs
+          
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
-          echo "::set-output name=package_version::${PACKAGE_VERSION}"
+          echo "::set-output name=package_version::${PACKAGE_VERSION}" 
 
       - name: Create Git Tag
         id: set_tag
         run: |
-          # Check if the tag already exists
+          
           TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
           if [ -z "$TAG_EXISTS" ]; then
-            # Create and push the new tag
+            
             echo "Creating new tag: ${PACKAGE_VERSION}"
             git tag ${PACKAGE_VERSION}
             git push origin ${PACKAGE_VERSION}
@@ -72,7 +72,7 @@ jobs:
         run: |
           echo "Packing project with version: ${PACKAGE_VERSION}"
           dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
-          # List files in the output directory for debugging
+          
           ls -al ./bin/Release
 
       - name: Upload Package as Artifact
@@ -83,7 +83,7 @@ jobs:
 
   push_to_nexus:
     runs-on: ubuntu-latest
-    needs: build  # Ensure this job runs after the build job
+    needs: build  
     environment: nexus-approval  
 
     steps:
@@ -102,7 +102,7 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          # Use the correct package ID and version
+          
           echo "Pushing package ${PACKAGE_VERSION} to Nexus..."
           dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
  
