--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,11 +3,16 @@ name: Publish Package
 on:
   push:
     branches:
-      - master  
+      - development
+      - release
+      - master
+    tags:
+      - '*' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     outputs:
       package_id: ${{ steps.set_name.outputs.package_id }}
       package_version: ${{ steps.set_name.outputs.package_version }}
@@ -30,49 +35,35 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
-          FOLDER_NAME="nexus-git"
-          
-          
-          git fetch --tags
-          
-          
-          TAG=$(git tag --sort=-creatordate | grep -E '^[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
-          
-          if [ -z "$TAG" ]; then
-            TAG="1.0.0"  
+          FOLDER_NAME="nexus-git-development"
+          if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+            PACKAGE_ID="${FOLDER_NAME}.nexus-git"
+            PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
+          elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
+            COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+            PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
+            PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
+          elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+            # Use the tag associated with the push to the master branch as the version
+            if [[ ! -z "${{ github.ref }}" && "${{ github.ref }}" == refs/tags/* ]]; then
+              TAG_NAME="${GITHUB_REF#refs/tags/}"  # Extract the tag name
+              PACKAGE_ID="nexus-git-${TAG_NAME}"
+              PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version
+            else
+              # If no tag, fallback to a default version
+              PACKAGE_ID="nexus-git-1.0.1"
+              PACKAGE_VERSION="1.0.1"
+            fi
           fi
-          
-          
-          IFS='.' read -r -a VERSION_PARTS <<< "$TAG"
-          VERSION_PARTS[2]=$((VERSION_PARTS[2]+1))  
-          PACKAGE_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
-          PACKAGE_ID="nexus-git-${PACKAGE_VERSION}"
-
-          
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
-          echo "::set-output name=package_version::${PACKAGE_VERSION}" 
-
-      - name: Create Git Tag
-        id: set_tag
-        run: |
-          
-          TAG_EXISTS=$(git tag --list "${PACKAGE_VERSION}")
-          if [ -z "$TAG_EXISTS" ]; then
-            
-            echo "Creating new tag: ${PACKAGE_VERSION}"
-            git tag ${PACKAGE_VERSION}
-            git push origin ${PACKAGE_VERSION}
-          else
-            echo "Tag ${PACKAGE_VERSION} already exists. Skipping tag creation."
-          fi
+          echo "::set-output name=package_version::${PACKAGE_VERSION}"
 
       - name: Pack project
         run: |
-          echo "Packing project with version: ${PACKAGE_VERSION}"
           dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
-          
+          # List files in the output directory for debugging
           ls -al ./bin/Release
 
       - name: Upload Package as Artifact
@@ -83,8 +74,8 @@ jobs:
 
   push_to_nexus:
     runs-on: ubuntu-latest
-    needs: build  
-    environment: nexus-approval  
+    needs: build
+    environment: nexus-approval
 
     steps:
       - name: Download Package Artifact
@@ -102,7 +93,4 @@ jobs:
           NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
         run: |
-          
-          echo "Pushing package ${PACKAGE_VERSION} to Nexus..."
           dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
- 
