--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,11 +3,9 @@ name: Publish Package
 on:
   push:
     branches:
-      - development
-      - release
-      - master
+      - master  
     tags:
-      - '*' 
+      - '*'  
 
 jobs:
   build:
@@ -29,14 +27,19 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build project 
+      - name: Build project
         run: dotnet build --configuration Release
 
       - name: Set package name and version
         id: set_name
         run: |
           FOLDER_NAME="nexus-git-development"
-          if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+          if [[ "${{ github.ref }}" == "refs/tags/*" ]]; then
+            # Get the tag name from the push ref
+            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Remove 'refs/tags/' prefix
+            PACKAGE_ID="nexus-git-${TAG_NAME}"
+            PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.7)
+          elif [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
             PACKAGE_ID="${FOLDER_NAME}.nexus-git"
             PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
           elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
@@ -44,17 +47,11 @@ jobs:
             PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
             PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
           elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            # Use the tag associated with the push to the master branch as the version
-            if [[ ! -z "${{ github.ref }}" && "${{ github.ref }}" == refs/tags/* ]]; then
-              TAG_NAME="${GITHUB_REF#refs/tags/}"  # Extract the tag name
-              PACKAGE_ID="nexus-git-${TAG_NAME}"
-              PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version
-            else
-              # If no tag, fallback to a default version
-              PACKAGE_ID="nexus-git-1.0.1"
-              PACKAGE_VERSION="1.0.1"
-            fi
+            # If for some reason there's no tag, fallback to a default version
+            PACKAGE_ID="nexus-git-1.0.1"
+            PACKAGE_VERSION="1.0.1"
           fi
+
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
