--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -3,7 +3,7 @@ name: Publish Package
 on:
   push:
     branches:
-      - master  
+      - master
     tags:
       - '*'  
 
@@ -33,25 +33,11 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
-          FOLDER_NAME="nexus-git-development"
           if [[ "${{ github.ref }}" == "refs/tags/*" ]]; then
-            # Get the tag name from the push ref
-            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Remove 'refs/tags/' prefix
+            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Extract the tag name
             PACKAGE_ID="nexus-git-${TAG_NAME}"
             PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.7)
-          elif [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
-            PACKAGE_ID="${FOLDER_NAME}.nexus-git"
-            PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
-          elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
-            COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
-            PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
-            PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
-          elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
-            # If for some reason there's no tag, fallback to a default version
-            PACKAGE_ID="nexus-git-1.0.1"
-            PACKAGE_VERSION="1.0.1"
           fi
-
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
@@ -59,8 +45,10 @@ jobs:
 
       - name: Pack project
         run: |
-          dotnet pack --configuration Release --output ./bin/Release /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
-          # List files in the output directory for debugging
+          echo "Packaging with version: ${{ steps.set_name.outputs.package_version }}"
+          dotnet pack --configuration Release --output ./bin/Release \
+            /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
+            /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
           ls -al ./bin/Release
 
       - name: Upload Package as Artifact
