--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - '*'  
+      - '*'  # Trigger on any tag push
 
 jobs:
   build:
@@ -33,11 +33,30 @@ jobs:
       - name: Set package name and version
         id: set_name
         run: |
+          # Initialize the version variables
+          FOLDER_NAME="nexus-git-development"
+          
           if [[ "${{ github.ref }}" == "refs/tags/*" ]]; then
-            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Extract the tag name
+            # Extract the tag name from the github ref (e.g., refs/tags/v1.0.7)
+            TAG_NAME="${GITHUB_REF#refs/tags/}"  # Remove the 'refs/tags/' prefix to get the tag name
             PACKAGE_ID="nexus-git-${TAG_NAME}"
             PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.7)
+          else
+            # Fallback for other branches like development and release
+            if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
+              PACKAGE_ID="${FOLDER_NAME}.nexus-git"
+              PACKAGE_VERSION="1.0.0-${{ github.run_id }}" 
+            elif [[ "${{ github.ref }}" == "refs/heads/release" ]]; then
+              COMMIT_ID=$(echo "${{ github.sha }}" | cut -c1-6)
+              PACKAGE_ID="nexus-git-1.0.0-release-${COMMIT_ID}"
+              PACKAGE_VERSION="1.0.0-release-${COMMIT_ID}"
+            elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+              PACKAGE_ID="nexus-git-1.0.1"
+              PACKAGE_VERSION="1.0.1"
+            fi
           fi
+
+          # Output the version for debugging
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
