--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -37,10 +37,11 @@ jobs:
           FOLDER_NAME="nexus-git-development"
           
           if [[ "${{ github.ref }}" == "refs/tags/*" ]]; then
-            # Extract the tag name from the github ref (e.g., refs/tags/v1.0.7)
+            # Extract the tag name from github.ref (e.g., refs/tags/1.0.6)
             TAG_NAME="${GITHUB_REF#refs/tags/}"  # Remove the 'refs/tags/' prefix to get the tag name
+            echo "Tag name extracted: ${TAG_NAME}"
             PACKAGE_ID="nexus-git-${TAG_NAME}"
-            PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.7)
+            PACKAGE_VERSION="${TAG_NAME}"  # Use the tag as version (e.g., 1.0.6)
           else
             # Fallback for other branches like development and release
             if [[ "${{ github.ref }}" == "refs/heads/development" ]]; then
@@ -55,20 +56,23 @@ jobs:
               PACKAGE_VERSION="1.0.1"
             fi
           fi
-
+      
           # Output the version for debugging
           echo "PACKAGE_ID=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "PACKAGE_VERSION=${PACKAGE_VERSION}" >> $GITHUB_ENV
           echo "::set-output name=package_id::${PACKAGE_ID}"
           echo "::set-output name=package_version::${PACKAGE_VERSION}"
+      
 
       - name: Pack project
         run: |
-          echo "Packaging with version: ${{ steps.set_name.outputs.package_version }}"
-          dotnet pack --configuration Release --output ./bin/Release \
-            /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
-            /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
-          ls -al ./bin/Release
+            echo "Packaging with version: ${{ steps.set_name.outputs.package_version }}"
+            dotnet pack --configuration Release --output ./bin/Release \
+              /p:CustomPackageId=${{ steps.set_name.outputs.package_id }} \
+              /p:PackageVersion=${{ steps.set_name.outputs.package_version }}
+            # List files in the output directory for debugging
+            ls -al ./bin/Release
+        
 
       - name: Upload Package as Artifact
         uses: actions/upload-artifact@v3
