--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+      - development
+      - release
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
