--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yml  
+    uses: ./.github/workflows/build.yaml  
     with:
       branch: ${{ github.ref }}  
 
