--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-      - development
-      - release
     tags:
       - '*'  
 
@@ -18,6 +16,9 @@ jobs:
       package_version: ${{ steps.set_name.outputs.package_version }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2 
+
       - name: Build Project
         uses: ./.github/actions/build  
 
@@ -25,7 +26,6 @@ jobs:
         id: set_name
         run: |
           echo "Checking GITHUB_REF: $GITHUB_REF"
-          
           FOLDER_NAME="nexus-git-development"
           PACKAGE_ID=""
           PACKAGE_VERSION=""
@@ -80,14 +80,3 @@ jobs:
         with:
           name: nuget-package
           path: ./bin/Release
-
-      - name: List files in Release directory
-        run: ls -al ./ bin/Release
-
-      - name: Push to Nexus Repository
-        env:
-          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-          NEXUS_API_KEY: ${{ secrets.NEXUS_API_KEY }}
-        run: |
-          dotnet nuget push ./bin/Release/${{ needs.build.outputs.package_id }}.${{ needs.build.outputs.package_version }}.nupkg --source http://52.187.94.85:8081/repository/nuget-tag/ --api-key $NEXUS_API_KEY
