--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -82,7 +82,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2 
       - name: SonarQube Scan
-        uses: ./.github/actions/sonar-scan 
+        uses: ./.github/actions/sonar-scan
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}  
+          sonar_token: ${{ secrets.SONAR_TOKEN }} 
 
   push_to_nexus:
     runs-on: ubuntu-latest
