fixed shell for tag

--- a/.github/workflows/pack-scan-push.yaml
+++ b/.github/workflows/pack-scan-push.yaml
@@ -101,6 +101,7 @@ jobs:
               echo "Quality Gate failed. Stopping the workflow."
               exit 1
             fi
+        shell: bash
   push_to_nexus:
     runs-on: ubuntu-latest
     needs: sonar_scan
